Fixed chat, overflow on importer

--- a/scss/exaltedessence.scss
+++ b/scss/exaltedessence.scss
@@ -485,6 +485,10 @@
   }
 }
 
+.overflow-scroll {
+  overflow-y: scroll;
+}
+
 .exaltedessence-dialog {
   table {
     margin: 0px;
